# simpdf

./: README.md  pyproject.toml
examples/: basic_render.py  custom_font_and_style.py  images_custom_callback.py  images_from_filesystem.py  rich_markdown.py
simpdf/: __init__.py  cli.py  fonts.py  images.py  markdown.py  options.py  pdfgen.py  renderer.py
tests/: conftest.py  pdfgen_smoke.py  test_cli.py  test_fonts.py  test_images.py  test_markdown.py  test_renderer.py
